# gmail-calendar-sweep

./: .gitignore  Code.js  README.md  app.js  index.html  pyproject.toml  styles.css
.github/workflows/: publish_gmail_candidate_pages.yml
data/latest/: discover.json  preview.json
data/runs/: index.json
data/runs/20260326_101009/: create.json
data/runs/20260326_104548/: create.json  discover.json  preview.json
data/runs/20260326_105418/: create.json  discover.json  preview.json
data/runs/20260326_111318/: create.json  discover.json  preview.json
data/runs/20260326_111507/: create.json  discover.json  preview.json
data/runs/20260326_111633/: create.json  discover.json  preview.json
data/runs/20260326_112112/: create.json  discover.json  preview.json
data/runs/20260326_112446/: create.json  discover.json  preview.json
data/runs/20260326_113233/: create.json  discover.json  preview.json
data/runs/20260326_121742/: create.json  discover.json  preview.json
data/runs/20260326_124116/: create.json  discover.json  preview.json
data/runs/20260326_125017/: create.json  discover.json  preview.json
data/runs/20260327_061928/: create.json  discover.json  preview.json
data/runs/20260328_061009/: create.json  discover.json  preview.json
data/runs/20260329_061746/: create.json  (+2 more)
docs/: app.js  index.html
gmail_candidate_scan/: __init__.py  auth.py  calendar_integration.py  calendar_report.py  cli.py  config.py  extraction.py  gmail_client.py  json_artifacts.py  pages_builder.py  report.py
tests/: test_calendar_identity.py  test_pages_builder.py
(+156 files in other folders)
